--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
       "activitybar": [
         {
           "id": "chatgpt",
-          "title": "ChatGPT",
+          "title": "DarshGPT",
           "icon": "resources/icon.png"
         }
       ]
